# big_data_and_cloud_Marcus_Ericsson_DE24

./: .gitignore  README.md
code-alongs/14_IaC_terraform_deploy_taipy/: dockerfile  main.py  pyproject.toml  requirements.txt
code-alongs/14_IaC_terraform_deploy_taipy/assets/: main.css  responsive_screen.css  text.css
code-alongs/14_IaC_terraform_deploy_taipy/backend/: data_processing.py  update.py
code-alongs/14_IaC_terraform_deploy_taipy/frontend/pages/: dashboard.py  data.py  home.py
code-alongs/14_IaC_terraform_deploy_taipy/iac/: backend.tf  env_variable.sh  main.tf  providers.tf  random.tf
exercise/ex_1_pipeline_part1/: docker-compose.yaml  dockerfile.dwh  pyproject.toml
exercise/ex_1_pipeline_part1/data_extract_load/: constants.py  load_data.ipynb  load_data.py
exercise/ex_1_pipeline_part1/data_transformation/: dbt_project.yml
exercise/ex_1_pipeline_part1/data_transformation/docs/: overview.md
exercise/ex_1_pipeline_part1/data_transformation/macros/: change_null.sql
exercise/ex_1_pipeline_part1/data_transformation/models/: schema.yml
exercise/ex_1_pipeline_part1/data_transformation/models/dim/: info.sql  serie.sql
exercise/ex_1_pipeline_part1/data_transformation/models/fct/: fct_tvseries.sql
exercise/ex_1_pipeline_part1/data_transformation/models/mart/: episode_info.sql  rating_serie.sql
exercise/ex_1_pipeline_part1/data_transformation/models/src/: sources.yml  src_tvseries.sql  (+1 more)
exercise/ex_1_pipeline_part1/data_transformation/tests/: schema.yml  show_name.sql  test_season.sql
exercise/ex_1_pipeline_part1/orchestration/: definitions.py
(+11 files in other folders)
